[package]
name = "marketplace-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-event-standard = "0.5.0"
casper-event-toolkit = { git = "https://github.com/koxu1996/casper-event-toolkit.git", version = "0.1.1" }
casper-types = "4.0.1"
tokio = "1.37.0"
tokio-postgres = "0.7.10"
dotenv = "0.15.0"

